--- a/Queuectl/QueueCTL_Final.ipynb
+++ b/Queuectl/QueueCTL_Final.ipynb
@@ -279,7 +279,7 @@
     "    print(f\" Retried DLQ job: {job_id}\")\n",
     "\n",
     "# Example usage\n",
-    "print(\"💀 DLQ Jobs:\")\n",
+    "print(\" DLQ Jobs:\")\n",
     "pprint(list_dlq())\n",
     "\n",
     "# Retry one\n",
